--- a/turnjs4/samples/magazine/slider.html
+++ b/turnjs4/samples/magazine/slider.html
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 	<div class="bottom">
-		<div id=" class="turnjs-slider">
+		<div id="slider-bar" class="turnjs-slider">
 			<div id="slider"></div>
 		</div>
 	</div>
